fix stock
